# storico

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  opencode.json  prod.todo.md  todo.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  spec-api-endpoints.md  spec-tasks-api-endpoints.md  vercel.json
backend/api/: index.py
backend/src/storico/: __init__.py
backend/src/storico/api/: app.py  dependencies.py  errors.py
backend/src/storico/api/routes/: __init__.py  auth.py  export.py  extraction.py  extractions.py  health.py  projects.py  settings.py  stories.py  tasks.py  users.py  workspace_settings.py  workspaces.py
backend/src/storico/api/schemas/: __init__.py  common.py  extraction.py  project.py  settings.py  story.py  task.py  user.py  workspace.py  workspace_llm_config.py  workspace_member.py  workspace_prompt.py
backend/src/storico/application/extraction/: __init__.py  extract_from_story.py
backend/src/storico/application/workspaces/: __init__.py  create_workspace.py  manage_members.py  rename_workspace.py  slug.py  transfer_ownership.py
backend/src/storico/config/: settings.py
backend/src/storico/domain/entities/: __init__.py  exceptions.py  extraction.py  project.py  task.py  user.py  user_account.py  user_preferences.py  user_story.py  workspace.py  workspace_llm_config.py  workspace_member.py  workspace_prompt.py
backend/src/storico/domain/ports/: __init__.py  extraction_repository.py  llm_port.py  project_repository.py  task_repository.py  user_preferences_repository.py  user_repository.py  user_story_repository.py  vector_store_port.py  workspace_llm_config_repository.py  workspace_member_repository.py  workspace_prompt_repository.py  workspace_repository.py
backend/src/storico/domain/services/: extraction_judge_service.py  extraction_service.py
backend/src/storico/infrastructure/database/: base.py  session.py
backend/src/storico/infrastructure/database/alembic/: env.py
backend/src/storico/infrastructure/database/models/: __init__.py  base.py  extraction.py  project.py  task.py  (+8 more)
backend/src/storico/infrastructure/llm/: __init__.py  gemini_adapter.py  ollama_adapter.py  prompt_manager.py  task_parser.py
backend/src/storico/infrastructure/tasks/: __init__.py  extraction_task.py
backend/src/storico/infrastructure/vector/: __init__.py  embedding_service.py  qdrant_adapter.py
backend/tests/: conftest.py  test_health.py
backend/tests/test_api/: test_auth.py  test_export.py  test_extraction.py  test_extractions.py  test_projects.py  test_stories.py  test_tasks.py  test_users.py
backend/tests/test_repositories/: test_extraction_repo.py  test_project_repo.py  test_task_repo.py  test_user_repo.py  test_user_story_repo.py
backend/tests/test_services/: test_extraction_service.py
backend/tests/test_unit/: test_embedding_service.py  test_ollama_adapter.py  test_prompt_manager.py  test_task_parser.py  test_vector_store.py
(+202 files in other folders)
