[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storico-backend"
version = "0.3.0"
authors = [
    {name = "Angel L. Valdés Sánchez"}
]
description = "Storico — LLM-powered tool that automates decomposing user stories into structured Kanban tasks"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mangum>=0.17.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # LLM
    "ollama>=0.3.0",
    "google-genai>=1.0.0",

    # Vector store
    "qdrant-client>=1.11.0",

    # HTTP
    "httpx>=0.27.0",

    # Templating
    "Jinja2>=3.1.0",

    # JWT
    "PyJWT>=2.9.0",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "aiosqlite>=0.20.0",
    "testcontainers-postgres>=0.0.1rc1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
storico = ["**/*.j2"]

[tool.vercel]
entrypoint = "api.index:app"

[project.urls]
Source = "https://github.com/alvaldes/storico"
